# wfc_demo

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  Readme.md  index.html  wamba-ci.json
demo/: CMakeLists.txt  demo.cpp  demo.hpp  demo_config_json.hpp  demo_gateway_object.cpp  demo_gateway_object.hpp  demo_instance.cpp  demo_instance.hpp  demo_module.cpp  demo_module.hpp  demo_object.cpp  demo_object.hpp  demo_package.cpp  demo_package.hpp  demo_service_object.cpp  demo_service_object.hpp  demo_storage.cpp  demo_storage.hpp  idemo.hpp  idemo_master.hpp  idemo_slave.hpp  server_tcp.cpp  server_tcp.hpp  server_tcp_config.hpp  server_tcp_config_json.hpp
demo/api/: api.hpp  del.hpp  generate.hpp  get.hpp  idemo.hpp  ipingpong.hpp  restore.hpp  reverse.hpp  set.hpp  set_json.hpp  types.hpp
demo/api/demo/: get.hpp  get_json.hpp  set.hpp  set_json.hpp  types.hpp
demo/api/json/: get_json.hpp  set_json.hpp
demo/api/pingpong/: ping.hpp  ping_json.hpp  pong.hpp  pong_json.hpp
demo/demo/: demo.cpp  demo.hpp  demo_config_json.hpp
demo/domain/: demo_config.hpp  demo_domain.cpp  demo_domain.hpp
demo/gateway/: demo_gateway.hpp  method_list.hpp  pingpong_gateway.hpp
demo/hash/: hash.cpp  hash.hpp  hash_config.hpp  hash_config_json.hpp  hash_multiton.cpp  ihash.hpp
demo/hash/api/: get_hash.hpp  get_hash_json.hpp
demo/hash/gateway/: hash_gateway.hpp  hash_gateway_multiton.cpp  hash_gateway_multiton.hpp
demo/hash/service/: hash_service.hpp  hash_service_multiton.cpp
demo/module/: demo_gateway_multiton.cpp  demo_gateway_multiton.hpp  demo_module.cpp  demo_module.hpp  demo_multiton.cpp  demo_multiton.hpp  demo_service_multiton.cpp  demo_service_multiton.hpp  pingpong_gateway_multiton.cpp  pingpong_gateway_multiton.hpp  pingpong_module.cpp  pingpong_module.hpp  pingpong_multiton.cpp  pingpong_multiton.hpp  pingpong_service_multiton.cpp  pingpong_service_multiton.hpp
demo/pingpong/: pingpong.cpp  pingpong.hpp  pingpong_config.hpp  pingpong_config_json.hpp
demo/service/: demo_service.hpp  method_list.hpp  pingpong_service.hpp
demo/storage/: istorage.hpp  storage.cpp  storage.hpp  storage_config.hpp  storage_config_json.hpp  storage_module.cpp  storage_module.hpp  storage_multiton.cpp  storage_multiton.hpp
demo/storage/api/: get.hpp  get_json.hpp  set.hpp  set_json.hpp  types.hpp
demo/storage/gateway/: storage_gateway.hpp  storage_gateway_multiton.cpp  storage_gateway_multiton.hpp
demo/storage/service/: storage_service.hpp
libstorage/tests/: CMakeLists.txt  storage_suite.cpp  storage_test.cpp
module/: CMakeLists.txt  build_info.h  demo_config.hpp  demo_config_json.hpp  demo_instance.cpp  demo_instance.hpp  demo_module.cpp  demo_module.hpp  hash_instance.cpp  hash_module.cpp  hash_module.hpp  server_tcp.cpp  server_tcp.hpp
module/api/: api_json.hpp  generate_json.hpp  get_json.hpp  hash_json.hpp  reverse_json.hpp  set_json.hpp  types_json.hpp
module/domain/: domain.cpp  domain.hpp  domain_config.hpp  domain_config_json.hpp
module/gateway/: method_list.hpp
module/service/: connection_stream.hpp  context.hpp  method_list.hpp  server_tcp.cpp  server_tcp.hpp  server_tcp_config.hpp  server_tcp_config_json.hpp  server_tcp_impl.hpp
module/service/api/: generate_method.hpp  get_method.hpp  method_list.hpp  reverse_method.hpp  set_method.hpp  tags.hpp
package/: CMakeLists.txt  demo_package.cpp  demo_package.hpp
package/demo/: demo_module.cpp  demo_module.hpp  idemo.hpp
package/demo/api/: get.hpp  get_hashed.hpp  get_hashed_json.hpp  get_json.hpp  multiget.hpp  multiget_hashed.hpp  multiget_hashed2.hpp  multiget_hashed2_json.hpp  multiget_hashed_json.hpp  multiget_json.hpp  set.hpp  set_json.hpp
package/demo/domain/: demo_config.hpp  demo_config_json.hpp  demo_domain.cpp  demo_domain.hpp  demo_multiton.cpp  demo_multiton.hpp
package/demo/gateway/: demo_gateway.hpp  demo_gateway_multiton.cpp  demo_gateway_multiton.hpp
package/demo/service/: demo_service.hpp  demo_service_multiton.cpp  demo_service_multiton.hpp
package/hash/: hash.cpp  hash.hpp  hash_config_json.hpp  hash_module.cpp  hash_module.hpp  hash_multiton.cpp  hash_multiton.hpp  ihash.hpp  logger.hpp
package/hash/api/: get_hash.hpp  get_hash_json.hpp  types.hpp
package/hash/domain/: hash.cpp  hash.hpp  hash_config.hpp  hash_config_json.hpp  hash_domain.cpp  hash_domain.hpp  hash_multiton.cpp  hash_multiton.hpp
package/hash/gateway/: hash_gateway.hpp  hash_gateway_multiton.cpp  hash_gateway_multiton.hpp
package/hash/service/: hash_service.hpp  hash_service_multiton.cpp  hash_service_multiton.hpp
package/pingpong/: ipinger.hpp  ipingpong.hpp  iponger.hpp  pingpong_module.cpp  pingpong_module.hpp
package/pingpong/api/: ball.hpp  ball_json.hpp  ping.hpp  ping_json.hpp  pong.hpp  pong_json.hpp
package/pingpong/domain/: pingpong.cpp  pingpong.hpp  pingpong_config.hpp  pingpong_config_json.hpp  pingpong_multiton.cpp  pingpong_multiton.hpp
package/pingpong/gateway/: pinger_gateway.hpp  pinger_gateway_multiton.cpp  pingpong_gateway.hpp  pingpong_gateway_multiton.cpp  pingpong_gateway_multiton.hpp  ponger_gateway_multiton.cpp
package/pingpong/pinger/: pinger.cpp  pinger.hpp  pinger_config.hpp  pinger_config_json.hpp  pinger_multiton.cpp  pinger_multiton.hpp
package/pingpong/pinger_gateway/: pinger_gateway.hpp  pinger_gateway_multiton.cpp  pinger_gateway_multiton.hpp
package/pingpong/pinger_service/: pinger_service.hpp  pinger_service_multiton.cpp  pinger_service_multiton.hpp
package/pingpong/ponger/: ponger.cpp  ponger.hpp  ponger_config.hpp  ponger_config_json.hpp  ponger_multiton.cpp  ponger_multiton.hpp
package/pingpong/ponger_gateway/: ponger_gateway.hpp  ponger_gateway_multiton.cpp  ponger_gateway_multiton.hpp
package/pingpong/ponger_service/: ponger_service.hpp  ponger_service_multiton.cpp  ponger_service_multiton.hpp
package/pingpong/service/: pinger_service.hpp  pinger_service_multiton.cpp  pinger_service_multiton.hpp  pingpong_service.hpp  (+4 more)
package/storage/: istorage.hpp  storage.cpp  storage.hpp  storage_config_json.hpp  storage_module.cpp  storage_module.hpp
(+412 files in other folders)
